[package]
name = "mc-nbtdoc-generated"
version = "0.1.0"
authors = ["MrYurihi <mryurihi2003@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rebuild"
path = "src/rebuild.rs"

[[bin]]
name = "main"
path = "src/build.rs"

[lib]
name = "mc_nbtdoc_gen"

[dependencies]
nbtdoc = { git = "https://github.com/MrYurihi/nbtdoc-rs", features = [ "serde" ] }
serde_json = "1.0.41"
serde = "1.0.102"
git2 = "0.10"