[package]
name = "nbtdoc-test"
version = "0.1.0"
authors = ["MrYurihi <mryurihi2003@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nbtdoc = { git = "https://github.com/MrYurihi/nbtdoc-rs.git" }
glob = "0.3.0"
nom = "5.0.1"