[package]
name = "nbtdoc-test"
version = "0.1.0"
authors = ["Yurihaia <17830663+Yurihaia@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nbtdoc = { git = "https://github.com/Yurihaia/nbtdoc-rs.git" }
glob = "0.3.0"
nom = "5.0.1"